--- a/data/spells/abjuration-05-h47yv6j6x1pUtzlr.htm
+++ b/data/spells/abjuration-05-h47yv6j6x1pUtzlr.htm
@@ -5,7 +5,7 @@ Nom: Contre-mesure arcanique
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: the spell cast by the triggering creature
 TargetFR: 
 ------ Description (en) ------
