--- a/data/spells/abjuration-09-ihbRf964JDXztcy3.htm
+++ b/data/spells/abjuration-09-ihbRf964JDXztcy3.htm
@@ -5,7 +5,7 @@ Nom: Disjonction
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 magic item
 TargetFR: 
 ------ Description (en) ------
