--- a/data/spells/conjuration-03-GKpEcy9WId6NJvtx.htm
+++ b/data/spells/conjuration-03-GKpEcy9WId6NJvtx.htm
@@ -7,7 +7,7 @@ Nom: Nuage nauséabond
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create a cloud of putrid mist in the area. The cloud functions as @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Obscuring Mist} except it sickens creatures that end their turns within the cloud. (The @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} condition is not a poison effect.)</p>
 <hr />
