--- a/data/spells/conjuration-05-5ttAVJbWg2GVKmrN.htm
+++ b/data/spells/conjuration-05-5ttAVJbWg2GVKmrN.htm
@@ -5,7 +5,7 @@ Nom: Saut de l'ombre
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 MaterialEN: You are in dim light or darkness
 MaterialFR: 
 ------ Description (en) ------
