--- a/data/spells/divination-03-1HfusQ8NDWutGvMx.htm
+++ b/data/spells/divination-03-1HfusQ8NDWutGvMx.htm
@@ -5,7 +5,7 @@ Nom: Vision animale
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 animal
 TargetFR: 
 ------ Description (en) ------
