--- a/data/spells/divination-04-GqvKSxzN7A7kuFk4.htm
+++ b/data/spells/divination-04-GqvKSxzN7A7kuFk4.htm
@@ -5,7 +5,7 @@ Nom: Tenter le sort
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: the triggering creature
 TargetFR: 
 ------ Description (en) ------
