--- a/data/spells/enchantment-02-b515AZlB0sridKSq.htm
+++ b/data/spells/enchantment-02-b515AZlB0sridKSq.htm
@@ -7,7 +7,7 @@ Nom: Apaisement des émotions
 AreasizeEN: 10-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You forcibly calm creatures in the area, soothing them into a nonviolent state; each creature must attempt a Will save.</p>
 <hr /><strong>Critical Success</strong> The creature is unaffected.
