--- a/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
+++ b/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
@@ -7,7 +7,7 @@ Nom: Poussière scintillante
 AreasizeEN: 10-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>Creatures in the area are outlined by glittering dust. Each creature must attempt a Reflex save. If a creature has its invisibility negated by this spell, it is @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} instead of @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{Invisible}. This applies both if the creature was already Invisible and if it benefits from new invisibility effects before the end of the invisibility negation effect from this spell.</p>
 <hr />
