--- a/data/spells/evocation-04-hVU9msO9yGkxKZ3J.htm
+++ b/data/spells/evocation-04-hVU9msO9yGkxKZ3J.htm
@@ -7,7 +7,7 @@ Nom: Colère divine
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You can channel the fury of your deity against foes of opposed alignment. Choose an alignment your deity has (chaotic, evil, good, or lawful). You can't cast this spell if you don't have a deity or your deity is true neutral. This spell gains the trait of the alignment you chose. You deal 4d10 damage of the alignment you chose; each creature in the area must attempt a Fortitude save. Creatures that match the alignment you chose are unaffected. Those that neither match nor oppose it treat the result of their saving throw as one degree better.</p>
 <hr />
