--- a/data/spells/evocation-05-tpLTLbJUrYcMWGld.htm
+++ b/data/spells/evocation-05-tpLTLbJUrYcMWGld.htm
@@ -5,7 +5,7 @@ Nom: Transport télékinésique
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 unattended object of up to 80 Bulk with no dimension longer than 20 feet
 TargetFR: 
 ------ Description (en) ------
