--- a/data/spells/illusion-09-qDjeG6dxT4aEEC6J.htm
+++ b/data/spells/illusion-09-qDjeG6dxT4aEEC6J.htm
@@ -5,7 +5,7 @@ Nom: Ennemi subconscient
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: any number of creatures
 TargetFR: 
 ------ Description (en) ------
