--- a/data/spells/transmutation-03-TUbXnR4RAuYzRx1u.htm
+++ b/data/spells/transmutation-03-TUbXnR4RAuYzRx1u.htm
@@ -5,7 +5,7 @@ Nom: Pyrotechnie
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 fire
 TargetFR: 
 ------ Description (en) ------
