--- a/data/spells/transmutation-06-znv4ECL7ZtuiagtA.htm
+++ b/data/spells/transmutation-06-znv4ECL7ZtuiagtA.htm
@@ -5,7 +5,7 @@ Nom: Chair en pierre
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature made of flesh
 TargetFR: 
 ------ Description (en) ------
