--- a/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
+++ b/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
@@ -7,7 +7,7 @@ Nom: Éteindre
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You cause the air in the area to become supersaturated with water vapor. Non-magical fires within the area are automatically extinguished. Fire creatures within the area take [[/r 4d8]] damage (basic Fortitude save). Choose one magical fire, fire spell, or fire item in the area and attempt to counteract it. If you succeed against an item, the item loses its fire properties for 10 minutes (for instance, a <em>+1 @Compendium[pf2e.equipment-srd.XszNvxnymWYRaoTp]{Flaming} @Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{Longsword} </em>would become a <em>+1 Longsword</em>). If the target is an artifact or similarly powerful item, you automatically fail to counteract it.</p>
 <p>When you @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Sustain this Spell}, you can move the area of vapor anywhere within range, but the only effect when you do so is to automatically extinguish non-magical fires.</p>
