--- a/data/spells/abjuration-02-9HpwDN4MYQJnW0LG.htm
+++ b/data/spells/abjuration-02-9HpwDN4MYQJnW0LG.htm
@@ -5,7 +5,7 @@ Nom: Dissipation de la magie
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 spell effect or unattended magic item
 TargetFR: 
 ------ Description (en) ------
