--- a/data/spells/abjuration-05-jQdm301h6e8hIY4U.htm
+++ b/data/spells/abjuration-05-jQdm301h6e8hIY4U.htm
@@ -5,7 +5,7 @@ Nom: Gardien spirituel
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 MaterialEN: You have a deity.
 MaterialFR: 
 ------ Description (en) ------
