--- a/data/spells/abjuration-07-XZE4BawIlTf88Yl9.htm
+++ b/data/spells/abjuration-07-XZE4BawIlTf88Yl9.htm
@@ -7,7 +7,7 @@ Nom: Verrou dimensionnel
 AreasizeEN: 60-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create a shimmering barrier that attempts to counteract teleportation effects and planar travel into or out of the area, including items that allow access to extradimensional spaces (such as a bag of holding). Dimensional lock tries to counteract any attempt to summon a creature into the area but doesn't stop the creature from departing when the summoning ends.</p>
 ------ Description (fr) ------
