--- a/data/spells/conjuration-01-qTr2oCgIXl703Whb.htm
+++ b/data/spells/conjuration-01-qTr2oCgIXl703Whb.htm
@@ -5,7 +5,7 @@ Nom: Cadeau attentionné
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 willing creature
 TargetFR: 
 ------ Description (en) ------
