--- a/data/spells/conjuration-02-9XHmC2JgTUIQ1CCm.htm
+++ b/data/spells/conjuration-02-9XHmC2JgTUIQ1CCm.htm
@@ -7,7 +7,7 @@ Nom: Brume de dissimulation
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You call forth a cloud of mist. All creatures within the mist become @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed}, and all creatures outside the mist become Concealed to creatures within it. You can Dismiss the cloud.</p>
 ------ Description (fr) ------
