--- a/data/spells/conjuration-03-iQD8OhhkwhvD8Blw.htm
+++ b/data/spells/conjuration-03-iQD8OhhkwhvD8Blw.htm
@@ -7,7 +7,7 @@ Nom: Marais de paresse
 AreasizeEN: 5-foot burst or more
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>Ground in the area turns swampy and fetid. The area is difficult terrain. The sludge at the bottom of the morass animates into diminutive sludge beasts that have a demonic appearance. These don't function as normal creatures, but they swarm over creatures in the swamp and exude a noxious stench. The swamp deals 1d6 poison damage; creatures that end their turn in the area must attempt a basic Fortitude save. You can increase the number of actions it takes to Cast the Spell. For each additional action, increase the burst's radius by 5 feet.</p>
 <hr />
