--- a/data/spells/conjuration-04-VlNcjmYyu95vOUe8.htm
+++ b/data/spells/conjuration-04-VlNcjmYyu95vOUe8.htm
@@ -5,7 +5,7 @@ Nom: Porte dimensionnelle
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>Opening a door that bypasses normal space, you instantly transport yourself and any items you're wearing and holding from your current space to a clear space within range you can see. If this would bring another creature with you-even if you're carrying it in an extradimensional container-the spell is lost.</p>
 <hr />
