--- a/data/spells/conjuration-04-piMJO6aYeDJbrhEo.htm
+++ b/data/spells/conjuration-04-piMJO6aYeDJbrhEo.htm
@@ -7,7 +7,7 @@ Nom: Brouillard dense
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You conjure a bank of fog so thick it impedes movement as well as sight. This functions as @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Obscuring Mist}, except that the area is also difficult terrain. You can Dismiss the spell.</p>
 ------ Description (fr) ------
