--- a/data/spells/enchantment-03-IihxWhRfpsBgQ5jS.htm
+++ b/data/spells/enchantment-03-IihxWhRfpsBgQ5jS.htm
@@ -5,7 +5,7 @@ Nom: Discours captivant
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: all creatures in range
 TargetFR: 
 ------ Description (en) ------
