--- a/data/spells/enchantment-04-MLdMUOdwSKegOGlo.htm
+++ b/data/spells/enchantment-04-MLdMUOdwSKegOGlo.htm
@@ -5,7 +5,7 @@ Nom: Ambition insipide
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
