--- a/data/spells/enchantment-09-FmNDwqMEjeTEGPrY.htm
+++ b/data/spells/enchantment-09-FmNDwqMEjeTEGPrY.htm
@@ -5,7 +5,7 @@ Nom: Chant énigmatique
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: up to 5 creatures
 TargetFR: 
 ------ Description (en) ------
