--- a/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
+++ b/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
@@ -7,7 +7,7 @@ Nom: Hostilité naturelle
 AreasizeEN: 500-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: up to 5 creatures
 TargetFR: 
 ------ Description (en) ------
