--- a/data/spells/evocation-01-kl2q6JvBZwed4B6v.htm
+++ b/data/spells/evocation-01-kl2q6JvBZwed4B6v.htm
@@ -5,7 +5,7 @@ Nom: Lumières dansantes
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create up to four floating lights, no two of which are more than 10 feet apart. Each sheds light like a torch. When you Sustain the Spell, you can move any number of lights up to 60 feet. Each light must remain within 120 feet of you and within 10 feet of all others, or it winks out.</p>
 ------ Description (fr) ------
