--- a/data/spells/evocation-02-4GE2ZdODgIQtg51c.htm
+++ b/data/spells/evocation-02-4GE2ZdODgIQtg51c.htm
@@ -7,7 +7,7 @@ Nom: Ténèbres
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create a shroud of darkness that prevents light from penetrating or emanating within the area. Light does not enter the area and any non-magical light sources, such as a torch or lantern, do not emanate any light while inside the area, even if their light radius would extend beyond the darkness. This also suppresses magical light of your darkness spell's level or lower. Light can't pass through, so creatures in the area can't see outside. From outside, it appears as a globe of pure darkness.</p>
 <hr />
