--- a/data/spells/evocation-02-Fq9yCbqI2RDt6Orw.htm
+++ b/data/spells/evocation-02-Fq9yCbqI2RDt6Orw.htm
@@ -5,7 +5,7 @@ Nom: Arme spirituelle
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>A weapon made of pure magical force materializes and attacks foes you designate within range. This weapon has a ghostly appearance and manifests as a club, a dagger, or your deity's favored weapon.</p>
 <p>When you cast the spell, the weapon appears next to a foe you choose within range and makes a Strike against it. Each time you Sustain the Spell, you can move the weapon to a new target within range (if needed) and Strike with it. The spiritual weapon uses and contributes to your multiple attack penalty.</p>
