--- a/data/spells/evocation-02-WqPhJNzLa8vSjrH6.htm
+++ b/data/spells/evocation-02-WqPhJNzLa8vSjrH6.htm
@@ -7,7 +7,7 @@ Nom: Assaut animé
 AreasizeEN: 10-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You use your mind to manipulate unattended objects in the area, temporarily animating them to attack. The objects hover in the air, then hurl themselves at nearby creatures in a chaotic flurry of debris. This assault deals [[/r 2d10 #bludgeoning]] bludgeoning damage (basic Reflex save) to each creature in the area. On subsequent rounds, you can @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Sustain the Spell}, dealing [[/r 1d10#bludgeoning]] bludgeoning damage (basic Reflex save) to each creature in the area.</p>
 <hr />
