--- a/data/spells/evocation-02-f8hRqLJaxBVhF1u0.htm
+++ b/data/spells/evocation-02-f8hRqLJaxBVhF1u0.htm
@@ -5,7 +5,7 @@ Nom: Flèche acide
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
