--- a/data/spells/evocation-02-x0rWq0wS06dns4G2.htm
+++ b/data/spells/evocation-02-x0rWq0wS06dns4G2.htm
@@ -5,7 +5,7 @@ Nom: Sacrifice final
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature with the minion trait that you summoned or permanently control
 TargetFR: 
 ------ Description (en) ------
