--- a/data/spells/evocation-03-DyiD239dNS7RIxZE.htm
+++ b/data/spells/evocation-03-DyiD239dNS7RIxZE.htm
@@ -5,7 +5,7 @@ Nom: Lumière brûlante
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
