--- a/data/spells/evocation-03-eIPIZp2FUbFcLNdj.htm
+++ b/data/spells/evocation-03-eIPIZp2FUbFcLNdj.htm
@@ -5,7 +5,7 @@ Nom: Pilier d'eau
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create a large, self-contained cylinder of still fresh water. The pillar has a maximum radius of 15 feet and a maximum height of 60 feet. Creatures inside the pillar can swim through the water as normal (Swim DC 10), or, if the spell was cast on solid ground, walk along the bottom (which is difficult terrain). Any creature that exits the pillar falls or lands accordingly.</p>
 ------ Description (fr) ------
