--- a/data/spells/evocation-03-it4ZsAi6XgvGcodc.htm
+++ b/data/spells/evocation-03-it4ZsAi6XgvGcodc.htm
@@ -5,7 +5,7 @@ Nom: Mur de vent
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You create a barrier of gusting winds that hinders anything moving through it. The wall of swirling winds is 5 feet thick, 60 feet long, and 30 feet high. The wall stands vertically, but you can shape its path. Though the wall of wind distorts the air, it does not hamper sight. The wall has the following effects.</p>
 <ul>
