--- a/data/spells/evocation-03-sRfSBHWHdbIa0aGc.htm
+++ b/data/spells/evocation-03-sRfSBHWHdbIa0aGc.htm
@@ -5,7 +5,7 @@ Nom: Ténèbres glaciales
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
