--- a/data/spells/evocation-04-K4LXpaBWrGy6jIER.htm
+++ b/data/spells/evocation-04-K4LXpaBWrGy6jIER.htm
@@ -7,7 +7,7 @@ Nom: Déluge
 AreasizeEN: 30-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You call forth a torrential downpour, which extinguishes nonmagical flames. Creatures in the area are @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} and gain fire resistance 10. Creatures outside the area are Concealed to those inside the area. Creatures with weakness to water that end their turns in the area take damage equal to their weakness.</p>
 <hr />
