--- a/data/spells/evocation-05-E3X2RbzWHCdz7gsk.htm
+++ b/data/spells/evocation-05-E3X2RbzWHCdz7gsk.htm
@@ -7,7 +7,7 @@ Nom: Colonne de feu
 AreasizeEN: 10-foot radius, 40-foot-tall cylinder
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You call a rain of divine fire that plummets down from above, dealing 8d6 fire damage. Because the flame is infused with divine energy, creatures in the area apply only half their usual fire resistance. Creatures that are immune to fire, instead of gaining the usual benefit of immunity, treat the results of their saving throws as one degree of success better.</p>
 <hr />
