--- a/data/spells/evocation-05-ZW8ovbu1etdfMre3.htm
+++ b/data/spells/evocation-05-ZW8ovbu1etdfMre3.htm
@@ -7,7 +7,7 @@ Nom: Tempête d'acide
 AreasizeEN: 20-foot-radius burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You evoke a storm of acid rain that pelts the area for the spell's duration. A creature that begins its turn in the area takes 3d8 acid damage.</p>
 <hr />
