--- a/data/spells/evocation-06-r7ihOgKv19eJQnik.htm
+++ b/data/spells/evocation-06-r7ihOgKv19eJQnik.htm
@@ -5,7 +5,7 @@ Nom: Désintégration
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 creature or unattended object
 TargetFR: 
 ------ Description (en) ------
