--- a/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
+++ b/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
@@ -5,7 +5,7 @@ Nom: Assassin imaginaire
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 living creature
 TargetFR: 
 ------ Description (en) ------
