--- a/data/spells/necromancy-02-XFtO4BBI22Uox2QP.htm
+++ b/data/spells/necromancy-02-XFtO4BBI22Uox2QP.htm
@@ -7,7 +7,7 @@ Nom: Dégradation soudaine
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>You accelerate the processes of decay in the area. Each living creature in the area takes [[/r 2d10 #negative]] negative damage (basic Fortitude save). A creature afflicted by a disease takes a -2 circumstance penalty to this save.You can also direct the blight to rot all Small and Tiny non-creature plants in the area, eliminating non-magical undergrowth and any resulting difficult terrain, cover, and concealment. <em>Sudden blight</em> attempts to counteract any magical effect on the plants before withering them.</p>
 <hr />
