--- a/data/spells/transmutation-02-J6vNvrUT3b1hx2iA.htm
+++ b/data/spells/transmutation-02-J6vNvrUT3b1hx2iA.htm
@@ -7,7 +7,7 @@ Nom: Enchevêtrement
 AreasizeEN: all squares in a 20-foot-radius burst that contain plants
 AreasizeFR: 
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 ------ Description (en) ------
 <p>Plants in the area entangle creatures. The area counts as difficult terrain. Each round that a creature starts its turn in the area, it must attempt a Reflex save. On a failure, it takes a -10-foot circumstance penalty to its Speeds until it leaves the area, and on a critical failure, it is also @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized} for 1 round. Creatures can attempt to Escape at entangle's DC to remove these effects.</p>
 ------ Description (fr) ------
