--- a/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
+++ b/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
@@ -5,7 +5,7 @@ Nom: Cloué à terre
 
 ------ Data ------
 RangeEN: 120 feet
-RangeFR: 
+RangeFR: 36 m
 TargetEN: 1 flying creature
 TargetFR: 
 ------ Description (en) ------
