--- a/data/spells/abjuration-04-7Fd4lxozd11MQ55N.htm
+++ b/data/spells/abjuration-04-7Fd4lxozd11MQ55N.htm
@@ -5,7 +5,7 @@ Nom: Pénitence
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: another creature of up to 8th level who is a worshipper of the same deity or philosophy as you
 TargetFR: 
 SecondaryCasterEN: 1, must be the ritual's target
