--- a/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
+++ b/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
@@ -5,7 +5,7 @@ Nom: Secret bien gardé
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: you and any number of willing allies
 TargetFR: 
 ------ Description (en) ------
