--- a/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
+++ b/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
@@ -5,7 +5,7 @@ Nom: Piège artisanal bondissant
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: one snare you built
 TargetFR: 
 ------ Description (en) ------
