--- a/data/spells/conjuration-03-AkF4yFcSCdhoULyZ.htm
+++ b/data/spells/conjuration-03-AkF4yFcSCdhoULyZ.htm
@@ -5,7 +5,7 @@ Nom: Éveiller un portail
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 portal
 TargetFR: 
 SecondaryCasterEN: up to 5
