--- a/data/spells/divination-01-Vvxgn7saUPW2bJhb.htm
+++ b/data/spells/divination-01-Vvxgn7saUPW2bJhb.htm
@@ -5,7 +5,7 @@ Nom: Lire le destin
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 creature other than you
 TargetFR: 
 ------ Description (en) ------
