--- a/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
+++ b/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
@@ -5,7 +5,7 @@ Nom: Éveil d’animal
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 animal up to the level on Table 7-1
 TargetFR: 
 SecondaryCasterEN: 03
