--- a/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
+++ b/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
@@ -5,7 +5,7 @@ Nom: Envoûtement
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 creature of a level no greater than double the inveigle ritual's level
 TargetFR: 
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
