--- a/data/spells/enchantment-03-Q690d3mw3TUrKX7E.htm
+++ b/data/spells/enchantment-03-Q690d3mw3TUrKX7E.htm
@@ -5,7 +5,7 @@ Nom: Serment rituel
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 creature of a level no greater than double the geas ritual's level
 TargetFR: 
 SecondaryCasterEN: 01
