--- a/data/spells/enchantment-04-I8CPe9Pp7GABqOyB.htm
+++ b/data/spells/enchantment-04-I8CPe9Pp7GABqOyB.htm
@@ -5,7 +5,7 @@ Nom: Zèle au combat
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: you and the triggering ally
 TargetFR: 
 ------ Description (en) ------
