--- a/data/spells/evocation-01-Qw3fnUlaUbnn7ipC.htm
+++ b/data/spells/evocation-01-Qw3fnUlaUbnn7ipC.htm
@@ -5,7 +5,7 @@ Nom: Prestidigitation
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 object (cook, lift, or tidy only)
 TargetFR: 
 ------ Description (en) ------
