--- a/data/spells/evocation-08-2CNqkt2s2IYkVnv6.htm
+++ b/data/spells/evocation-08-2CNqkt2s2IYkVnv6.htm
@@ -5,7 +5,7 @@ Nom: Emprisonnement
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 creature of up to 16th level
 TargetFR: 
 SecondaryCasterEN: 06
