--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -5,7 +5,7 @@ Nom: Création de mort-vivant
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 dead creature
 TargetFR: 
 SecondaryCasterEN: 01
