--- a/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
+++ b/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
@@ -5,7 +5,7 @@ Nom: Résurrection
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 dead creature of up to 10th level
 TargetFR: 
 SecondaryCasterEN: 02
