--- a/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
+++ b/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
@@ -5,7 +5,7 @@ Nom: Animation d'objet
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 object
 TargetFR: 
 SecondaryCasterEN: 01
