--- a/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
+++ b/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
@@ -5,7 +5,7 @@ Nom: Statuette
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 freestanding, non-magical object no larger than 3,000 cubic feet (the size of a Huge creature)
 TargetFR: 
 SecondaryCasterEN: 02
