--- a/data/spells/abjuration-09-PngDCmU0MXZkbu0v.htm
+++ b/data/spells/abjuration-09-PngDCmU0MXZkbu0v.htm
@@ -5,7 +5,7 @@ Nom: Sphère prismatique
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 ------ Description (en) ------
 <p>You create a seven-layered sphere to protect an area. This multicolored sphere functions like a @Compendium[pf2e.spells-srd.iL6TujgTCtRRa0Y0]{Prismatic Wall} but is shaped in a 10-foot burst centered on a corner of your space. You must form the sphere in an unbroken open space so its edges don't pass through any creatures or objects, or the spell is lost.</p>
 ------ Description (fr) ------
