--- a/data/spells/necromancy-06-IkGYwHRLhkuoGReG.htm
+++ b/data/spells/necromancy-06-IkGYwHRLhkuoGReG.htm
@@ -5,7 +5,7 @@ Nom: Rappel à la vie
 
 ------ Data ------
 RangeEN: 10 feet
-RangeFR: 
+RangeFR: 3 m
 TargetEN: 1 dead creature of 13th level or lower
 TargetFR: 
 ------ Description (en) ------
