--- a/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
+++ b/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
@@ -5,7 +5,7 @@ Nom: Feuille morte
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 falling creature
 TargetFR: 
 ------ Description (en) ------
