--- a/data/spells/conjuration-01-W69zswpj0Trdy5rj.htm
+++ b/data/spells/conjuration-01-W69zswpj0Trdy5rj.htm
@@ -5,7 +5,7 @@ Nom: Bulle d'air
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: the triggering creature
 TargetFR: 
 ------ Description (en) ------
