--- a/data/spells/conjuration-03-oUDNCArkQTdhllxD.htm
+++ b/data/spells/conjuration-03-oUDNCArkQTdhllxD.htm
@@ -5,7 +5,7 @@ Nom: Orbe aqueuse
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>A sphere of water 10 feet in diameter forms in an unoccupied space in range, either on the ground or on the surface of a liquid.</p>
 <p>When you @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast the Spell} and each time you @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Sustain the Spell}, you can roll the orb, moving it up to 10 feet along the ground or the surface of a liquid. Unlike most spells, you can gain this effect multiple times in the same round by Sustaining the Spell multiple times.</p>
