--- a/data/spells/conjuration-04-3xD8DYrr8YDVYGg7.htm
+++ b/data/spells/conjuration-04-3xD8DYrr8YDVYGg7.htm
@@ -7,7 +7,7 @@ Nom: Piques de pierre
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>Long, sharp spikes of solid rock thrust up from the ground in the area. The area becomes difficult terrain and hazardous terrain. A creature that moves on the ground through the area takes 3 piercing damage for every square of that area it moves into.</p>
 <hr />
