--- a/data/spells/divination-06-XULNb8ItUsfupxqH.htm
+++ b/data/spells/divination-06-XULNb8ItUsfupxqH.htm
@@ -5,7 +5,7 @@ Nom: Secret effroyable
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: up to 6 creatures
 TargetFR: 
 ------ Description (en) ------
