--- a/data/spells/divination-07-AlbpWWN87yGegoAF.htm
+++ b/data/spells/divination-07-AlbpWWN87yGegoAF.htm
@@ -5,7 +5,7 @@ Nom: Cible verrouillée
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 4 creatures
 TargetFR: 
 ------ Description (en) ------
