--- a/data/spells/enchantment-01-f0Z5mqGA6Yu79B8x.htm
+++ b/data/spells/enchantment-01-f0Z5mqGA6Yu79B8x.htm
@@ -5,7 +5,7 @@ Nom: Inspiration talentueuse
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 ally
 TargetFR: 
 ------ Description (en) ------
