--- a/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
+++ b/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
@@ -5,7 +5,7 @@ Nom: Furie aveuglante
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 MaterialEN: A creature damages you
 MaterialFR: 
 TargetEN: The triggering creature
