--- a/data/spells/enchantment-09-xFY9RtDE4DQKlWNR.htm
+++ b/data/spells/enchantment-09-xFY9RtDE4DQKlWNR.htm
@@ -5,7 +5,7 @@ Nom: Croisade
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: up to 4 creatures
 TargetFR: 
 ------ Description (en) ------
