--- a/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
+++ b/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
@@ -5,7 +5,7 @@ Nom: Poussée hydraulique
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature or unattended object
 TargetFR: 
 ------ Description (en) ------
