--- a/data/spells/evocation-01-kJKSLfCgqxmN2FY8.htm
+++ b/data/spells/evocation-01-kJKSLfCgqxmN2FY8.htm
@@ -5,7 +5,7 @@ Nom: Nuage de pluie individuel
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
