--- a/data/spells/evocation-01-pRKaEXnjGJXbPHPC.htm
+++ b/data/spells/evocation-01-pRKaEXnjGJXbPHPC.htm
@@ -5,7 +5,7 @@ Nom: Jet de pierre
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
