--- a/data/spells/evocation-02-zK0e9d9DSnxC4eAD.htm
+++ b/data/spells/evocation-02-zK0e9d9DSnxC4eAD.htm
@@ -5,7 +5,7 @@ Nom: Décharge soudaine
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature or object
 TargetFR: 
 ------ Description (en) ------
