--- a/data/spells/necromancy-04-2RhZkHNv8ajq0yLq.htm
+++ b/data/spells/necromancy-04-2RhZkHNv8ajq0yLq.htm
@@ -7,7 +7,7 @@ Nom: Champ inactif
 AreasizeEN: 15-foot emanation
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>A sickly yellow light fills the area as entropic forces prevent healing. When a creature within the area would regain Hit Points, such as from a healing effect or an ability like fast healing or regeneration, it must attempt a Will save.</p>
 <hr />
