--- a/data/spells/necromancy-05-2YIr0S2Gt14PMMQp.htm
+++ b/data/spells/necromancy-05-2YIr0S2Gt14PMMQp.htm
@@ -7,7 +7,7 @@ Nom: Étreinte de la tombe
 AreasizeEN: 20-foot radius on the ground
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>Hundreds of skeletal arms erupt from the ground in the area, clawing at creatures within and attempting to hold them in place. The skeletal arms deal 6d6 slashing damage. Each creature in the area must attempt a Reflex save.</p>
 <hr /><strong>Critical Success</strong> The creature is unaffected.
