--- a/data/spells/necromancy-05-59NR1hA2jPSgg2sW.htm
+++ b/data/spells/necromancy-05-59NR1hA2jPSgg2sW.htm
@@ -5,7 +5,7 @@ Nom: Enveloppe
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 15 foot cone
 TargetFR: 
 ------ Description (en) ------
