--- a/data/spells/necromancy-05-VDWIZuLOJqwBthHc.htm
+++ b/data/spells/necromancy-05-VDWIZuLOJqwBthHc.htm
@@ -5,7 +5,7 @@ Nom: Mâchoire dévorante
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: one living creature
 TargetFR: 
 ------ Description (en) ------
