--- a/data/spells/necromancy-08-gtWxTfMbIN5RHQw6.htm
+++ b/data/spells/necromancy-08-gtWxTfMbIN5RHQw6.htm
@@ -5,7 +5,7 @@ Nom: Un est tout, tout est un
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: You and up to 10 willing living allies
 TargetFR: 
 ------ Description (en) ------
