--- a/data/spells/transmutation-05-d9sBzPOXX3KT8uTu.htm
+++ b/data/spells/transmutation-05-d9sBzPOXX3KT8uTu.htm
@@ -5,7 +5,7 @@ Nom: Horribles excroissances
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 corporeal creature
 TargetFR: 
 ------ Description (en) ------
