--- a/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
+++ b/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
@@ -5,7 +5,7 @@ Nom: Déphasage de familier
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: your familiar
 TargetFR: 
 ------ Description (en) ------
