--- a/data/spells/conjuration-01-xqmHD8JIjak15lRk.htm
+++ b/data/spells/conjuration-01-xqmHD8JIjak15lRk.htm
@@ -5,7 +5,7 @@ Nom: Serviteur invisible
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>You summon an unseen servant, which you can command as part of Sustaining the Spell. It serves you until its Hit Points are reduced to 0, at which point the spell ends, or until you stop Sustaining the Spell. The unseen servant gains the summoned trait.</p>
 <p><strong>Unseen Servant</strong> [Creature] [-1] [No Alignment] [Medium]</p>
