--- a/data/spells/enchantment-01-Dj44lViYKvOJ8a53.htm
+++ b/data/spells/enchantment-01-Dj44lViYKvOJ8a53.htm
@@ -5,7 +5,7 @@ Nom: Ambition aveugle
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
