--- a/data/spells/enchantment-03-nplNt08TvokZUxtR.htm
+++ b/data/spells/enchantment-03-nplNt08TvokZUxtR.htm
@@ -5,7 +5,7 @@ Nom: Désespoir agonisant
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
