--- a/data/spells/evocation-01-DeNz6eAUlE0IE9U3.htm
+++ b/data/spells/evocation-01-DeNz6eAUlE0IE9U3.htm
@@ -5,7 +5,7 @@ Nom: Décharge hivernale
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
