--- a/data/spells/evocation-01-g1eY1vN44mgluE33.htm
+++ b/data/spells/evocation-01-g1eY1vN44mgluE33.htm
@@ -5,7 +5,7 @@ Nom: Javelot chargé
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 or more creatures
 TargetFR: 
 ------ Description (en) ------
