--- a/data/spells/evocation-01-iAnpxrLaBU4V6Sej.htm
+++ b/data/spells/evocation-01-iAnpxrLaBU4V6Sej.htm
@@ -5,7 +5,7 @@ Nom: Raz-de-marée
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
