--- a/data/spells/evocation-03-TT9owkeMBXJxcERB.htm
+++ b/data/spells/evocation-03-TT9owkeMBXJxcERB.htm
@@ -7,7 +7,7 @@ Nom: Rafale hors saison
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>You issue a blast of sudden wind that ripples outward from the center of the burst. The wind extinguishes small non-magical fires, disperses fog and mist, scatters objects of light Bulk or less, and pushes unsecured objects of 1 Bulk or less 5 feet away from the spell's origin point. Each Medium or smaller creature in the area when you Cast the Spell or that moves into spell's area must attempt a Fortitude saving throw.</p>
 <hr />
