--- a/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
+++ b/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
@@ -7,7 +7,7 @@ Nom: Volute de feu infernal
 AreasizeEN: 10-foot radius, 60-foot-tall cylinder
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>You call forth a plume of hellfire that erupts from below, dealing 4d6 fire damage and 4d6 evil damage.</p>
 <hr />
