--- a/data/spells/illusion-02-L0GoJpHxSD0wRY5k.htm
+++ b/data/spells/illusion-02-L0GoJpHxSD0wRY5k.htm
@@ -5,7 +5,7 @@ Nom: Trésor fantasmatique
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 living creature
 TargetFR: 
 ------ Description (en) ------
