--- a/data/spells/illusion-05-m4Mc5XbdML92BKOE.htm
+++ b/data/spells/illusion-05-m4Mc5XbdML92BKOE.htm
@@ -7,7 +7,7 @@ Nom: Géométrie étrange
 AreasizeEN: 4 cubes, each 10 feet on a side
 AreasizeFR: 
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 ------ Description (en) ------
 <p>You cause the areas to appear to swell, bend, and break, twisting together in a bizarre spatial geometry. The cubes of the spell's area can't be adjacent to one another. A creature must attempt a Will save if it's in one of the cubes when you Cast the Spell, or if it later enters one of the areas, with the following effects. A creature interacting with the illusion can also attempt a Will save to disbelieve the illusion, as normal.</p>
 <hr />
