--- a/data/spells/illusion-05-tcwT97RWKxsJiefG.htm
+++ b/data/spells/illusion-05-tcwT97RWKxsJiefG.htm
@@ -5,7 +5,7 @@ Nom: Siphon d'ombre
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: the triggering spell
 TargetFR: 
 ------ Description (en) ------
