--- a/data/spells/necromancy-01-uToa7ksKAzmEpkKC.htm
+++ b/data/spells/necromancy-01-uToa7ksKAzmEpkKC.htm
@@ -5,7 +5,7 @@ Nom: Rayon d'admonestation
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
