--- a/data/spells/necromancy-03-0chL1b4OFIZxpN3v.htm
+++ b/data/spells/necromancy-03-0chL1b4OFIZxpN3v.htm
@@ -5,7 +5,7 @@ Nom: Vol d'ombre
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
