--- a/data/spells/necromancy-04-Jli9WBjQZ2MmKJ8y.htm
+++ b/data/spells/necromancy-04-Jli9WBjQZ2MmKJ8y.htm
@@ -5,7 +5,7 @@ Nom: Anamnèse spirituelle
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
