--- a/data/spells/necromancy-04-S1Msrwi990FE7uMO.htm
+++ b/data/spells/necromancy-04-S1Msrwi990FE7uMO.htm
@@ -5,7 +5,7 @@ Nom: Appel du sang
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 living creature
 TargetFR: 
 ------ Description (en) ------
