--- a/data/spells/necromancy-05-DgCS456mXKw97vNy.htm
+++ b/data/spells/necromancy-05-DgCS456mXKw97vNy.htm
@@ -5,7 +5,7 @@ Nom: Ode à Ouroboros
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: the triggering creature
 TargetFR: 
 ------ Description (en) ------
