--- a/data/spells/transmutation-04-oiUhJbJ3YCKF62Fu.htm
+++ b/data/spells/transmutation-04-oiUhJbJ3YCKF62Fu.htm
@@ -5,7 +5,7 @@ Nom: Assombrir le regard
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
