--- a/data/spells/transmutation-05-B3tbO85GBpzQ3u8l.htm
+++ b/data/spells/transmutation-05-B3tbO85GBpzQ3u8l.htm
@@ -5,7 +5,7 @@ Nom: Forme déformée par un souhait
 
 ------ Data ------
 RangeEN: 60 feet
-RangeFR: 
+RangeFR: 18 m 
 TargetEN: 1 creature
 TargetFR: 
 ------ Description (en) ------
