--- a/data/spells/illusion-05-xPrbxyOEwy9QaPVn.htm
+++ b/data/spells/illusion-05-xPrbxyOEwy9QaPVn.htm
@@ -5,7 +5,7 @@ Nom: Couverture caméléon
 
 ------ Data ------
 RangeEN: 15 feet
-RangeFR: 
+RangeFR:  4,5 m
 TargetEN: up to 8 creatures
 TargetFR: 
 ------ Description (en) ------
