--- a/data/spells/necromancy-01-NkeLctXo9FLGnDhi.htm
+++ b/data/spells/necromancy-01-NkeLctXo9FLGnDhi.htm
@@ -5,7 +5,7 @@ Nom: Plaies divines
 
 ------ Data ------
 RangeEN: 15 feet
-RangeFR: 
+RangeFR:  4,5 m
 ------ Description (en) ------
 <p>Your deity sends wracking plagues. The target must attempt a Fortitude save. When you Cast the Spell, decide whether the disease inflicts the Clumsy, Enfeebled, or Stupefied condition.<br /><br /><strong>Divine Plague</strong> (disease) <strong>Level</strong> 1;</p>
 <p><strong>Stage 1</strong> @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 1}, @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 1}, or @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied 1} (1 round);</p>
