--- a/data/spells/transmutation-04-eb4FXf62NYArTqek.htm
+++ b/data/spells/transmutation-04-eb4FXf62NYArTqek.htm
@@ -5,7 +5,7 @@ Nom: Fioritures artistiques
 
 ------ Data ------
 RangeEN: 15 feet
-RangeFR: 
+RangeFR:  4,5 m
 TargetEN: 1 item or work of art that fits entirely within the range
 TargetFR: 
 ------ Description (en) ------
