--- a/data/spells/abjuration-01-OyiKIbWllLZC6sGz.htm
+++ b/data/spells/abjuration-01-OyiKIbWllLZC6sGz.htm
@@ -7,7 +7,7 @@ Nom: Veille du génie
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 willing creature
-TargetFR: 
+TargetFR: 1 créature volontaire
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within range is attacked.</p>
 <hr />
