--- a/data/spells/abjuration-02-5esP2GVzvxWsMgaX.htm
+++ b/data/spells/abjuration-02-5esP2GVzvxWsMgaX.htm
@@ -7,7 +7,7 @@ Nom: Endurance aux éléments
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing creature
-TargetFR: 
+TargetFR: 1 créature volontaire
 ------ Description (en) ------
 <p>You shield the target against dangerous temperatures. Choose severe cold or heat. The target is protected from the temperature you chose (but not extreme cold or heat).</p>
 <hr />
