--- a/data/spells/divination-01-D442XMADp01qJ7Cs.htm
+++ b/data/spells/divination-01-D442XMADp01qJ7Cs.htm
@@ -7,7 +7,7 @@ Nom: Lien mental
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing creature
-TargetFR: 
+TargetFR: 1 créature volontaire
 ------ Description (en) ------
 <p>You link your mind to the target's mind and mentally impart to that target an amount of information in an instant that could otherwise be communicated in 10 minutes.</p>
 ------ Description (fr) ------
