--- a/data/spells/transmutation-03-RvBlSIJmxiqfCpR9.htm
+++ b/data/spells/transmutation-03-RvBlSIJmxiqfCpR9.htm
@@ -7,7 +7,7 @@ Nom: Pieds en nageoires
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing creature
-TargetFR: 
+TargetFR: 1 créature volontaire
 ------ Description (en) ------
 <p>The target's feet transform into fins, improving mobility in the water but reducing it on land. The target gains a swim Speed equal to its normal land Speed, but its land Speed becomes 5 feet.</p>
 <hr />
