--- a/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
+++ b/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
@@ -7,7 +7,7 @@ Nom: Cloué à terre
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 flying creature
-TargetFR: 
+TargetFR: 1 créature volante
 ------ Description (en) ------
 <p>Using the weight of earth, you hamper a target's flight, with effects based on its Fortitude save. If the creature reaches the ground safely, it doesn't take falling damage.</p>
 <hr /><strong>Critical Success</strong> The target is unaffected.
