--- a/data/spells/divination-01-OhD2Z6rIGGD5ocZA.htm
+++ b/data/spells/divination-01-OhD2Z6rIGGD5ocZA.htm
@@ -7,7 +7,7 @@ Nom: Lecture de l'aura
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 object
-TargetFR: 
+TargetFR: 1 objet
 ------ Description (en) ------
 <p>You focus on the target object, opening your mind to perceive magical auras. When the casting is complete, you know whether that item is magical, and if it is, you learn the school of magic.</p>
 <p>If the object is illusory, you detect this only if the effect's level is lower than the level of your read aura spell.</p>
