--- a/data/spells/evocation-02-ynm8JIU3sc3qUMpa.htm
+++ b/data/spells/evocation-02-ynm8JIU3sc3qUMpa.htm
@@ -7,7 +7,7 @@ Nom: Flamme éternelle
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 object
-TargetFR: 
+TargetFR: 1 objet
 ------ Description (en) ------
 <p>A magical flame springs up from the object, as bright as a torch. It doesn't need oxygen, react to water, or generate heat.</p>
 <hr />
