--- a/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
+++ b/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
@@ -7,7 +7,7 @@ Nom: Animation d'objet
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 object
-TargetFR: 
+TargetFR: 1 objet
 SecondaryCasterEN: 01
 SecondaryCasterFR: 
 PrimaryCheckEN: Arcana (expert)
