--- a/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
+++ b/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
@@ -7,7 +7,7 @@ Nom: Festin des héros
 RangeEN: 40 feet
 RangeFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Nature, Religion, or Occultism (expert);
 PrimaryCheckFR: 
 SecondaryCheckEN: Diplomacy or Society
