--- a/data/spells/divination-06-7DN13ILADW2N9Z1t.htm
+++ b/data/spells/divination-06-7DN13ILADW2N9Z1t.htm
@@ -5,7 +5,7 @@ Nom: Communion
 
 ------ Data ------
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Occultism (master) or Religion (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Occultism or Religion (whichever is used for the primary check)
