--- a/data/spells/divination-06-l4LFwY7iuzX6sDXr.htm
+++ b/data/spells/divination-06-l4LFwY7iuzX6sDXr.htm
@@ -5,7 +5,7 @@ Nom: Communion avec la nature
 
 ------ Data ------
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (master
 PrimaryCheckFR: 
 SecondaryCheckEN: Nature
