--- a/data/spells/enchantment-03-Q690d3mw3TUrKX7E.htm
+++ b/data/spells/enchantment-03-Q690d3mw3TUrKX7E.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 creature of a level no greater than double the geas ritual's level
 TargetFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Society or Legal Lore
