--- a/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
+++ b/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
@@ -7,7 +7,7 @@ Nom: Contrôle du climat
 AreasizeEN: 2-mile-radius circle centered on you
 AreasizeFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Survival
