--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 dead creature
 TargetFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Religion
