--- a/data/spells/necromancy-04-7yWXx3qC4eFNHhxD.htm
+++ b/data/spells/necromancy-04-7yWXx3qC4eFNHhxD.htm
@@ -7,7 +7,7 @@ Nom: Flétrissement végétal
 AreasizeEN: 1/2-mile-radius circle centered on you
 AreasizeFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Survival
