--- a/data/spells/necromancy-05-gsYEuWv04XTDxe91.htm
+++ b/data/spells/necromancy-05-gsYEuWv04XTDxe91.htm
@@ -5,7 +5,7 @@ Nom: Appel d'un esprit
 
 ------ Data ------
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Occultism (expert) or Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Occultism or Religion (whichever isn't used for the primary check)
