--- a/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
+++ b/data/spells/transmutation-02-sLzPzk7DJnfuORJ0.htm
@@ -9,11 +9,11 @@ RangeFR: 3 m
 TargetEN: 1 object
 TargetFR: 1 objet
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Arcana (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (expert)
 SecondaryCheckEN: Crafting
-SecondaryCheckFR: 
+SecondaryCheckFR: Artisanat
 ------ Description (en) ------
 <p>You transform the target into an animated object with a level up to that allowed by Table 7-1 and of a type corresponding to the object (so a broom would become an animated broom).</p>
 <h2>Table 7-1: Creatures Creation Rituals</h2>
