--- a/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
+++ b/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
@@ -11,7 +11,7 @@ TargetFR:
 SecondaryCasterEN: 02
 SecondaryCasterFR: 
 PrimaryCheckEN: Arcana (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (expert)
 SecondaryCheckEN: Crafting, Occultism
 SecondaryCheckFR: 
 ------ Description (en) ------
