--- a/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
+++ b/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
@@ -9,11 +9,11 @@ RangeFR: contact
 TargetEN: 1 frame covered in the skin of sentient humanoids
 TargetFR: 
 SecondaryCasterEN: 01
-SecondaryCasterFR: 
+SecondaryCasterFR: 1
 PrimaryCheckEN: Religion (Expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Crafting
-SecondaryCheckFR: 
+SecondaryCheckFR: Artisanat
 ------ Description (en) ------
 <p>You transform the target into a skinstitch, a hideous construct covered in the flesh of sentient humanoids.</p>
 <hr />
