--- a/data/spells/enchantment-09-FmNDwqMEjeTEGPrY.htm
+++ b/data/spells/enchantment-09-FmNDwqMEjeTEGPrY.htm
@@ -7,7 +7,7 @@ Nom: Chant énigmatique
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: up to 5 creatures
-TargetFR: 
+TargetFR: jusqu'à 5 créatures
 ------ Description (en) ------
 <p>Fleeting notes of a strange and unnatural song fill the air, overtaking the mind. Each target must attempt a Will save when you cast the spell, and again the first time you Sustain this Spell each round. A creature needs to attempt only one save against the song each round, and you have to keep the same targets when you Sustain the Spell.</p>
 <hr />
