--- a/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
+++ b/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
@@ -9,7 +9,7 @@ AreasizeFR:
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: up to 5 creatures
-TargetFR: 
+TargetFR: jusqu'à 5 créatures
 ------ Description (en) ------
 <p>Animals and plants in the area turn against the targets. Each target suffers from the following effects as long as it remains in the area.</p>
 <ul>
