--- a/data/spells/transmutation-02-MZGkMsPBztFN0pUO.htm
+++ b/data/spells/transmutation-02-MZGkMsPBztFN0pUO.htm
@@ -7,7 +7,7 @@ Nom: Respiration aquatique
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: up to 5 creatures
-TargetFR: 
+TargetFR: jusqu'à 5 créatures
 ------ Description (en) ------
 <p>The targets can breathe underwater.</p>
 <hr />
