--- a/data/spells/enchantment-10-6s0UW4bujggma9TC.htm
+++ b/data/spells/enchantment-10-6s0UW4bujggma9TC.htm
@@ -7,7 +7,7 @@ Nom: Vérité fabriquée
 RangeEN: 100 feet
 RangeFR: 
 TargetEN: up to 5 creatures
-TargetFR: 
+TargetFR: jusqu'à 5 créatures
 ------ Description (en) ------
 <p><span>Choose a single statement you want the targets to believe. The fact could be narrow, such as "a dragon is circling overhead and wants to kill me"; wide-reaching, such as "all humanoids are disguised abominations"; or conceptual, such as "if I don't live a kinder life, I'll be punished in the afterlife." The targets' experiences color how they react to this "truth" and how their behavior changes. If the statement changes what they perceive, they treat the change as a sudden revelation.<br /></span></p>
 <p><span>The effect of the spell depends on the targets' Will saves. If a target is already subject to <em>fabricated truth</em>, your spell tries to counteract it. If the counteract check fails, the outcome of the target's saving throw can't be worse than a success. </span></p>
