--- a/data/spells/divination-08-y2cQYLr5mljDSu1G.htm
+++ b/data/spells/divination-08-y2cQYLr5mljDSu1G.htm
@@ -7,7 +7,7 @@ Nom: Observation implacable
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 TargetEN: 1 creature or object tracked and up to 5 other willing creatures
 TargetFR: 
 ------ Description (en) ------
