--- a/data/spells/enchantment-01-rerNA6YZsdxuJYt3.htm
+++ b/data/spells/enchantment-01-rerNA6YZsdxuJYt3.htm
@@ -5,7 +5,7 @@ Nom: Déjà vu
 
 ------ Data ------
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
