--- a/data/spells/enchantment-04-4DaHIgtMBTyxebY3.htm
+++ b/data/spells/enchantment-04-4DaHIgtMBTyxebY3.htm
@@ -5,7 +5,7 @@ Nom: Fouet du maître
 
 ------ Data ------
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 MaterialEN: Your most recent action dealt damage to a target.
 MaterialFR: 
 TargetEN: A creature you dealt damage to on your most recent action.
