--- a/data/spells/enchantment-10-6s0UW4bujggma9TC.htm
+++ b/data/spells/enchantment-10-6s0UW4bujggma9TC.htm
@@ -5,7 +5,7 @@ Nom: Vérité fabriquée
 
 ------ Data ------
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 TargetEN: up to 5 creatures
 TargetFR: jusqu'à 5 créatures
 ------ Description (en) ------
