--- a/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
+++ b/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
@@ -7,7 +7,7 @@ Nom: Explosion tempêtueuse
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 ------ Description (en) ------
 <p>You create a powerful blast of air and a loud peal of thunder, dealing 2d6 bludgeoning damage and 2d6 sonic damage. Each creature in the area must attempt a Fortitude save.</p>
 <hr />
