--- a/data/spells/transmutation-01-rVANhQgB8Uqi9PTl.htm
+++ b/data/spells/transmutation-01-rVANhQgB8Uqi9PTl.htm
@@ -5,7 +5,7 @@ Nom: Animation de corde
 
 ------ Data ------
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 TargetEN: up to 50 feet of rope or a nonliving rope-like object
 TargetFR: 
 ------ Description (en) ------
