--- a/data/spells/evocation-09-ZqmP9gijBmK7y8Xy.htm
+++ b/data/spells/evocation-09-ZqmP9gijBmK7y8Xy.htm
@@ -5,7 +5,7 @@ Nom: Arme du jugement
 
 ------ Data ------
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 MaterialEN: You have a deity.
 MaterialFR: 
 TargetEN: 1 creature
