--- a/data/spells/transmutation-03-KktHf7zIAWOr499h.htm
+++ b/data/spells/transmutation-03-KktHf7zIAWOr499h.htm
@@ -7,7 +7,7 @@ Nom: Roncier du rôdeur
 AreasizeEN: all squares that contain plants in a 5-foot burst
 AreasizeFR: 
 RangeEN: 100 feet
-RangeFR: 
+RangeFR: 30 m
 ------ Description (en) ------
 <p>You cause plants in the area to entangle your foes, with the effects of @Compendium[pf2e.spells-srd.J6vNvrUT3b1hx2iA]{Entangle}.</p>
 <p>A creature that critically fails the save takes [[/r 2d4 #persistent bleed]] persistent bleed damage in addition to being @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized}. @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Escaping} your bramble doesn't end the bleed damage.</p>
