cible une créature vivante

--- a/data/spells/enchantment-01-MmQiEc7aM9PDLO2J.htm
+++ b/data/spells/enchantment-01-MmQiEc7aM9PDLO2J.htm
@@ -7,7 +7,7 @@ Nom: Obéissance
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>Your imperious touch erodes the target's willpower, making it easier to control. The target attempts a Will save.</p>
 <hr />
