--- a/data/spells/enchantment-01-d2pi7laQkzlr3wrS.htm
+++ b/data/spells/enchantment-01-d2pi7laQkzlr3wrS.htm
@@ -7,7 +7,7 @@ Nom: Toucher ancestral
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You touch a creature and force them to see and feel the ancestors surrounding you. The target takes 1d4 mental damage, with results depending on a Will save.</p>
 <hr />
