--- a/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
+++ b/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
@@ -5,7 +5,7 @@ Nom: Simulacrum
 
 ------ Data ------
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 SecondaryCasterEN: 03
 SecondaryCasterFR: 
 PrimaryCheckEN: Arcana or Occultism (master, the check has the  secret trait
