--- a/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
+++ b/data/spells/illusion-04-tlcrVRqW1MSKJ5IC.htm
@@ -7,7 +7,7 @@ Nom: Assassin imaginaire
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You create a phantasmal image of the most fearsome creature imaginable to the target. Only the spell's target can see the killer, though you can see the vague shape of the illusion as it races forth to attack. The effect of the killer is based on the outcome of the target's Will save.</p>
 <hr />
