--- a/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
+++ b/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
@@ -7,7 +7,7 @@ Nom: Appel de la tombe
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You fire a ray of sickening energy. Make a spell attack roll.</p>
 <hr />
