--- a/data/spells/necromancy-01-D6T17BdazhNy3KPm.htm
+++ b/data/spells/necromancy-01-D6T17BdazhNy3KPm.htm
@@ -7,7 +7,7 @@ Nom: Siphon d'âme
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You siphon off a portion of the target's soul to bolster your own vitality. The target must attempt a Fortitude save or take 1d4 negative damage. You gain temporary Hit Points equal to the total amount of HP the target loses, including the HP lost from becoming @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained}.</p>
 <hr />
