--- a/data/spells/necromancy-01-GYI4xloAgkm6tTrT.htm
+++ b/data/spells/necromancy-01-GYI4xloAgkm6tTrT.htm
@@ -7,7 +7,7 @@ Nom: Toucher de la non-mort
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You attack the target's life force with undeath, dealing 1d6 negative damage. The target must attempt a Fortitude save.</p>
 <hr /><strong>Critical Success</strong> The target is unaffected.
