--- a/data/spells/necromancy-02-siU9xRlqWXeKT0mH.htm
+++ b/data/spells/necromancy-02-siU9xRlqWXeKT0mH.htm
@@ -7,7 +7,7 @@ Nom: Festin de cendres
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You curse the target with a hunger no food can sate. You can Dismiss the spell. The target must attempt a Fortitude save.</p>
 <hr />
