--- a/data/spells/necromancy-03-10siFBMF4pIDhVmf.htm
+++ b/data/spells/necromancy-03-10siFBMF4pIDhVmf.htm
@@ -7,7 +7,7 @@ Nom: Tasse de poussière
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You curse the target with a thirst no drink can quench. You can Dismiss the spell. The target must attempt a Fortitude save.</p>
 <hr />
