--- a/data/spells/necromancy-03-N1Z1oLPdBxaSgrEE.htm
+++ b/data/spells/necromancy-03-N1Z1oLPdBxaSgrEE.htm
@@ -7,7 +7,7 @@ Nom: Contact vampirique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>Your touch leeches the lifeblood out of a target to empower yourself. You deal 6d6 negative damage to the target. You gain temporary Hit Points equal to half the negative damage the target takes (after applying resistances and the like). You lose any remaining temporary Hit Points after 1 minute.</p>
 <hr />
