--- a/data/spells/necromancy-04-gfKhtVsXF3HKSdmY.htm
+++ b/data/spells/necromancy-04-gfKhtVsXF3HKSdmY.htm
@@ -7,7 +7,7 @@ Nom: Sceller le destin
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You utter a curse that a creature will meet a certain end-a death by freezing, stabbing, or another means you devise. Choose one type of damage from the following list: acid, bludgeoning, cold, electricity, fire, negative, piercing, slashing, or sonic. The effect is based on the target's Fortitude save.</p>
 <hr />
