--- a/data/spells/transmutation-01-1lmzILdCFENln8Cy.htm
+++ b/data/spells/transmutation-01-1lmzILdCFENln8Cy.htm
@@ -7,7 +7,7 @@ Nom: Amélioration physique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You temporarily improve the target's physique. The target gains a +2 status bonus to the next Acrobatics check, Athletics check, Fortitude save, or Reflex save it attempts.</p>
 <p>@Compendium[pf2e.spell-effects.XT3AyRfx4xeXfAjP]{Spell Effect: Physical Boost}</p>
