--- a/data/spells/enchantment-02-CQb8HtQ1BPeZmu9h.htm
+++ b/data/spells/enchantment-02-CQb8HtQ1BPeZmu9h.htm
@@ -7,7 +7,7 @@ Nom: Idiotie
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You dull the target's mind; the target must attempt a Will save.</p>
 <hr />
