--- a/data/spells/enchantment-02-tlSE7Ly8vi1Dgddv.htm
+++ b/data/spells/enchantment-02-tlSE7Ly8vi1Dgddv.htm
@@ -7,7 +7,7 @@ Nom: Fou rire
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>The target is overtaken with uncontrollable laughter. It must attempt a Will save.</p>
 <hr /><strong>Critical Success</strong> The target is unaffected.
