--- a/data/spells/necromancy-03-cqdmSmQnM0q6wbWG.htm
+++ b/data/spells/necromancy-03-cqdmSmQnM0q6wbWG.htm
@@ -7,7 +7,7 @@ Nom: Drain de vie
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You close your hand and pull life energy from another creature into yourself. This deals 3d4 negative damage; the target must attempt a basic Fortitude save.</p>
 <p>You gain temporary Hit Points equal to the damage the target takes, after resolving its save and applying your blood magic if applicable. If the target's Hit Points were lower than the damage you dealt, you gain temporary Hit Points equal to their remaining Hit Points instead. The temporary Hit Points last for 1 minute.</p>
