--- a/data/spells/necromancy-04-4y2DMq9DV5HvmnxC.htm
+++ b/data/spells/necromancy-04-4y2DMq9DV5HvmnxC.htm
@@ -7,7 +7,7 @@ Nom: Siphonner les couleurs
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>Your hand glows with impossible colors from beyond the stars, and your touch saps both color and vitality from the living. The target must attempt a Fortitude save; creatures with the gnome trait take a -2 circumstance penalty to this save.</p>
 <hr />
