--- a/data/spells/necromancy-07-Z9OrRXKgAPv6Hn5l.htm
+++ b/data/spells/necromancy-07-Z9OrRXKgAPv6Hn5l.htm
@@ -7,7 +7,7 @@ Nom: Doigt de mort
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 living creature
-TargetFR: 
+TargetFR: 1 créature vivante
 ------ Description (en) ------
 <p>You point your finger toward the target and speak a word of slaying. You deal 70 negative damage to the target. If the damage from finger of death reduces the target to 0 Hit Points, the target dies instantly.</p>
 <hr />
