Cible 1 créature ou objet

--- a/data/spells/abjuration-02-FzAtX8yXBjTaisJK.htm
+++ b/data/spells/abjuration-02-FzAtX8yXBjTaisJK.htm
@@ -7,7 +7,7 @@ Nom: Alignement indétectable
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 creature or object
-TargetFR: 
+TargetFR: 1 créature ou objet
 ------ Description (en) ------
 <p>You shroud a creature or object in wards that hide its alignment. The target appears to be neutral to all effects that would detect its alignment.</p>
 ------ Description (fr) ------
