--- a/data/spells/divination-08-CeSh8QcVnqP5OlLj.htm
+++ b/data/spells/divination-08-CeSh8QcVnqP5OlLj.htm
@@ -7,7 +7,7 @@ Nom: Localisation suprême
 RangeEN: unlimited
 RangeFR: 
 TargetEN: 1 creature or object
-TargetFR: 
+TargetFR: 1 créature ou objet
 ------ Description (en) ------
 <p>You learn the name of the target's exact location (including the building, community, and country) and plane of existence. You can target a creature only if you've seen it in person, have one of its significant belongings, or have a piece of its body. To target an object, you must have touched it or have a fragment of it. Discern location automatically overcomes protections against detection and divination of lower level than this spell, even if they would normally have a chance to block it.</p>
 ------ Description (fr) ------
