--- a/data/spells/illusion-02-eIQ86FOXK34HiNLs.htm
+++ b/data/spells/illusion-02-eIQ86FOXK34HiNLs.htm
@@ -7,7 +7,7 @@ Nom: Bouche magique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 creature or object
-TargetFR: 
+TargetFR: 1 créature ou objet
 ------ Description (en) ------
 <p>You specify a trigger and a message up to 25 words long. When the specified trigger occurs within 30 feet of the target, an illusory mouth appears on the target and speaks the message, and the magic mouth spell ends.</p>
 ------ Description (fr) ------
