--- a/data/spells/illusion-03-HHGUBGle4OjoxvNR.htm
+++ b/data/spells/illusion-03-HHGUBGle4OjoxvNR.htm
@@ -7,7 +7,7 @@ Nom: Sculpter le son
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 creature or object
-TargetFR: 
+TargetFR: 1 créature ou objet
 ------ Description (en) ------
 <p>You change the sounds made by a creature or object. Choose how you're altering the sounds when you @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast the Spell}; you can't alter it later. You can cause something that didn't create a sound to make sound, alter the voice of a creature, amplify or deaden a sound, or transform one sound into another. A creature who succeeds at a Perception check against your spell DC can determine that the sound was altered by an illusion, including hearing faint sounds if you deadened the sound, but they can't determine the true sound unless they critically succeed at the Perception check. You can @Compendium[pf2e.actionspf2e.AjLSHZSWQ90exdLo]{Dismiss} the spell.</p>
 <p>Because this spell obscures sound instead of preventing it, using the spell to quiet a creature doesn't prevent that creature from using verbal spell components, though it does prevent most auditory effects that rely on another creature hearing them accurately. An unwilling target can attempt a Will save.</p>
