--- a/data/spells/transmutation-01-AUctDF2fqPZN2w4W.htm
+++ b/data/spells/transmutation-01-AUctDF2fqPZN2w4W.htm
@@ -7,7 +7,7 @@ Nom: Symbole
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 creature or object
-TargetFR: 
+TargetFR: 1 créature ou objet
 ------ Description (en) ------
 <p>You harmlessly place your unique magical sigil, which is about 1 square inch in size, on the targeted creature or object. The mark can be visible or invisible, and you can change it from one state to another by using an Interact action to touch the target. The mark can be scrubbed or scraped off with 5 minutes of work. If it's on a creature, it fades naturally over the course of a week. The time before the mark fades increases depending on your heightened level.</p>
 <hr />
