champs de sorts

--- a/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
+++ b/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
@@ -7,7 +7,7 @@ Nom: Protection de domaine
 AreasizeEN: 100 feet × 100 feet, up to 50 feet high
 AreasizeFR: 
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana, Nature, or Occultism (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Lore (any), Survival, Thievery
