--- a/data/spells/conjuration-08-ZwwIUavMbEwcZz35.htm
+++ b/data/spells/conjuration-08-ZwwIUavMbEwcZz35.htm
@@ -5,7 +5,7 @@ Nom: Création de demi-plan
 
 ------ Data ------
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana, Nature, Occultism, or Religion  (legendary);
 PrimaryCheckFR: 
 SecondaryCheckEN: Arcana, Nature, Occultism,  Religion (whichever three aren't used for the primary check)
