--- a/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
+++ b/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 animal up to the level on Table 7-1
 TargetFR: 
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Nature (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Lore (any), Society, Survival
