--- a/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
+++ b/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
@@ -7,7 +7,7 @@ Nom: Simulacrum
 TargetEN: 1 living creature
 TargetFR: 1 créature vivante
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana or Occultism (master, the check has the  secret trait
 PrimaryCheckFR: 
 SecondaryCheckEN: rcana, Nature, Occultism,  Religion, or Society (whichever is required to Recall Knowledge  about the creature being duplicated); Crafting; Deception
