--- a/data/spells/illusion-09-nA0XlPsnMNrQMpio.htm
+++ b/data/spells/illusion-09-nA0XlPsnMNrQMpio.htm
@@ -9,7 +9,7 @@ AreasizeFR:
 TargetEN: 1 settlement and its residents
 TargetFR: 
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana or Occultism (legendary);
 PrimaryCheckFR: 
 SecondaryCheckEN: Society or Survival; Deception; Stealth
