--- a/data/spells/divination-05-zaZieDHguhahmM2z.htm
+++ b/data/spells/divination-05-zaZieDHguhahmM2z.htm
@@ -9,7 +9,7 @@ RangeFR:
 TargetEN: 1 pool of water
 TargetFR: 
 SecondaryCasterEN: 03
-SecondaryCasterFR: 
+SecondaryCasterFR: 3
 PrimaryCheckEN: Nature or Religion (master, the check has the secret trait)
 PrimaryCheckFR: 
 SecondaryCheckEN: Nature, Occultism, Religion, or Survival
