champs des sorts manquants

--- a/data/spells/evocation-03-6mmEz1UoTHGB7Sy9.htm
+++ b/data/spells/evocation-03-6mmEz1UoTHGB7Sy9.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon (Cuivre ou Noir)
 
 ------ Data ------
 AreasizeEN: 60-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 18 m
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #acid]] acid damage in a 60-foot line. Affected creatures can make a basic Reflex save.</p>
 <hr />
