--- a/data/spells/evocation-07-sX2o0HH4RjJDAZ8C.htm
+++ b/data/spells/evocation-07-sX2o0HH4RjJDAZ8C.htm
@@ -5,7 +5,7 @@ Nom: Décret divin
 
 ------ Data ------
 AreasizeEN: 40-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 12 m
 RangeEN: 40 feet
 RangeFR: 
 ------ Description (en) ------
