--- a/data/spells/necromancy-09-FEsuyf203wTNE2et.htm
+++ b/data/spells/necromancy-09-FEsuyf203wTNE2et.htm
@@ -5,7 +5,7 @@ Nom: Plainte d'outre-tombe
 
 ------ Data ------
 AreasizeEN: 40-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 12 m
 ------ Description (en) ------
 <p>Your scream chills the souls of enemies that hear it. Each living enemy in the area takes 8d10 negative damage and must attempt a Fortitude save.</p>
 <hr />
