--- a/data/spells/evocation-03-N0h3UodJFKdNQw1Y.htm
+++ b/data/spells/evocation-03-N0h3UodJFKdNQw1Y.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon (Airain)
 
 ------ Data ------
 AreasizeEN: 60-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 18 m
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #fire]] fire damage in a 60-foot line. Affected creatures can make a basic Reflex save.</p>
 <hr />
