--- a/data/spells/evocation-04-Y3G6Y6EDgCY0s3fq.htm
+++ b/data/spells/evocation-04-Y3G6Y6EDgCY0s3fq.htm
@@ -5,7 +5,7 @@ Nom: Torrent
 
 ------ Data ------
 AreasizeEN: 60-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 18 m
 ------ Description (en) ------
 <p>A swirling torrent of water manifests along a straight line, battering creatures and unattended objects in its path and possibly pushing them away from you. The torrent deals 8d6 bludgeoning damage. Each creature in the area must attempt a basic Fortitude save; unattended objects automatically fail. Creatures that fail the save are also knocked back 5 feet (10 feet on a critical failure).</p>
 <hr />
